--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,6 @@ body {
   position: relative;
 }
 
-p {
-  line-height: 1.4em;
-}
-
 /* page and Overlay */
 .page {
   position: relative;
@@ -52,7 +48,6 @@ p {
 
 .overlay {
   position: absolute;
-  content: "";
   top: 0;
   left: 0;
   width: 100%;
@@ -65,6 +60,11 @@ p {
 
 .page.navActive .overlay {
   background: rgba(0, 0, 0, 0.5);
+}
+
+.page.navActive {
+  height: 100vh;
+  overflow: hidden;
 }
 
 /* Nav */
@@ -174,6 +174,7 @@ main {
   color: var(--grayish-blue);
   font-size: 0.9em;
   font-weight: var(--fw-regular);
+  line-height: 1.4em;
 }
 
 .readMore {
@@ -236,6 +237,7 @@ main {
   color: var(--grayish-blue);
   font-size: 0.85rem;
   font-weight: var(--fw-regular);
+  line-height: 1.4em;
 }
 
 hr {
@@ -295,10 +297,7 @@ hr {
   font-size: 0.85rem;
   color: var(--dark-grayish-blue);
   font-weight: var(--fw-regular);
-}
-
-.hide {
-  display: none;
+  line-height: 1.4em;
 }
 
 a {
@@ -359,20 +358,21 @@ a {
   }
 
   .logo img {
-    width: 3.8em;
+    width: 2.8em;
     height: auto;
   }
 
   nav {
     position: relative;
+    padding-bottom: 0.8em;
   }
 
   .menu-button {
     position: sticky;
     right: 1rem;
     top: 25%;
-    width: 2.5em;
-    height: 2.5em;
+    width: 2.2em;
+    height: 2.2em;
     background-image: url("/images/icon-menu.svg");
     background-repeat: no-repeat;
     background-position: center;
@@ -393,6 +393,10 @@ a {
     padding-top: 10rem;
     padding-left: 1.5rem;
     transform: translateX(100%);
+  }
+
+  main {
+    margin-top: 0.2em;
   }
 
   .homepage {
